--- a/test.html
+++ b/test.html
@@ -106,7 +106,7 @@
                 // simpleSDK = new window.RingoverSDK({size: "auto", trayicon: false, animation: false});
 
                 // Container test constructor
-                // simpleSDK = new window.RingoverSDK({container: 'iframe-ringover', animation: false, border: false});
+                // simpleSDK = new window.RingoverSDK({container: 'iframe-ringover', size: "auto", backgroundcolor: "rgb(255,255,255)", type: "absolute", animation: false, border: false});
                 
                 // Event listener 
                 simpleSDK.on('changePage',   getEvent);
